--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,12 +20,15 @@
         <i class="fa-solid fa-bolt"></i>
       </div>
     </div>
-    <header>
+    <header class="welcome-header">
       <img
         src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"
+        class="welcome-header__logo"
       />
-      <h1>Welcome to LINE</h1>
-      <p>Free messaging, voice and video calls, and more!</p>
+      <h1 class="welcom-header__title">Welcome to LINE</h1>
+      <p class="welcome-header__text">
+        Free messaging, voice and video calls, and more!
+      </p>
     </header>
     <form>
       <input type="submit" value="Log in" />
